--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "fluzo-store": "^0.1.2",
-    "lodash": "^2.4.1"
+    "lodash": "^2.4.1",
+    "postal": "^0.12.3"
   }
 }
