Add package raf-polyfill

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "fluzo-store": "^0.2.1",
-    "postal": "^0.12.3"
+    "postal": "^0.12.3",
+    "raf-polyfill": "^0.1.9"
   }
 }
