Add helper methods

--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
   },
   "dependencies": {
     "fluzo-store": "^0.2.1",
+    "lodash": "^2.4.1",
     "postal": "^0.12.3",
-    "raf": "^2.0.4"
+    "raf": "^2.0.4",
+    "react": "^0.12.2"
   }
 }
