--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/jobedom/fluzo",
   "devDependencies": {
+    "bluebird": "^2.6.0",
     "coveralls": "^2.11.2",
     "istanbul": "^0.3.5",
     "jshint": "^2.5.11",
@@ -31,7 +32,6 @@
     "nodemon": "^1.2.1"
   },
   "dependencies": {
-    "fluzo-store": "^0.3.1",
     "lodash": "^2.4.1",
     "postal": "^0.12.3",
     "raf": "^2.0.4",
