Remove keyword for 'flux'

--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
   "keywords": [
     "javascript",
     "postaljs",
-    "reactjs",
-    "flux"
+    "reactjs"
   ],
   "author": "Joaquín Bernal <jobedom@gmail.com>",
   "license": "MIT",
